Added header with title, created search term bar, number of records to retrieve dropdown menu, start year search bar, end year search bar, added a search button, and added a clear results button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,52 @@
 
 </head>
 <body>
-    
-</body>
-</html>
+    <div class="jumbotron jumbotron-fluid">
+        <h1 id= "Title" class="display-4">New York Times Search</h1>
+    </div>
+
+    <div class="card">
+
+      <div class="card-header">
+        <h6>Search Parameters</h6>
+      </div>
+
+        <div class="card-body">
+
+        <h6>Search Term:</h6>
+        <div class="input-group mb-3">
+            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+        </div>
+
+        <h6>Number of Records to Retrieve:</h6>
+
+        <div class="input-group mb-3">
+        <select class="custom-select" id="inputGroupSelect02">
+            <option selected>0</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+        </select>
+        </div>
+
+         <h6>Start Year:</h6>
+
+        <div class="input-group mb-3">
+            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+        </div>
+
+        <h6>End Year:</h6>
+
+        <div class="input-group mb-3">
+            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+        </div>  
+				<button type="button" class="btn btn-light">Search</button>
+				<button type="button" class="btn btn-light">Clear Results</button>
+
+        </div>
+    </div>
+        
+    </body>
+    </html>
