Created a card for the Top Articles results to be displayed

--- a/index.html
+++ b/index.html
@@ -55,6 +55,15 @@
 
         </div>
     </div>
-        
+				
+		
+    <div class="card">
+
+      <div class="card-header">
+				<h6>Top Articles</h6>
+			</div>
+			<div class= "card-body">
+			</div>
+    </div>
     </body>
     </html>
