--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
 			</div>
 			<div class= "card-body">
 			</div>
-    </div>
-    </body>
+		</div>
+		
+		<div class="card-footer text-muted">
+			Made with lots and lots of ♥
+		</div>
+		</body>
+		
     </html>
