Created a css file and aligned H1 and Footer

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>New York Times Search</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+		<link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="jumbotron jumbotron-fluid">
-        <h1 id= "Title" class="display-4">New York Times Search</h1>
+        <h1 id= "title" class="display-4">New York Times Search</h1>
     </div>
 
     <div class="card">
@@ -66,7 +66,7 @@
 			</div>
 		</div>
 		
-		<div class="card-footer text-muted">
+		<div id= "footer" class="card-footer text-muted">
 			Made with lots and lots of ♥
 		</div>
 		</body>
